--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,63 @@
 // TODO
+.container {
+    max-width: 1120px;
+    margin: 0 auto;
+
+    .content {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        margin-bottom: 40px;
+        cursor: pointer;
+
+        &:hover {
+
+            h2 {
+                color: var(--highlight-color);
+            }
+
+            svg {
+                color: var(--highlight-color);
+            }
+        }
+
+        h2 {
+            font-size: 1.75rem;
+            font-weight: 700;
+            color: var(--head-color);
+            transition: color .6s;
+        }
+
+        p {
+            font-size: 1.125rem;
+            font-weight: 400;
+            color: var(--body-color);
+        }
+
+        .infos {
+            display: flex;
+            gap: 20px;
+
+            .card {
+                display: flex;
+                gap: 5px;
+
+                color: var(--info-color);
+
+                svg {
+                    transition: color .6s;
+                }
+            }
+        }
+    }
+
+    .nextPage {
+        color: var(--highlight-color);
+        font-size: 1.25rem;
+        cursor: pointer;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
