--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,4 +4,49 @@
   padding: 0;
 }
 
-// TODO
+:root {
+  --background-color: #282C34;
+  --head-color: #F8F8F8;
+  --body-color: #D7D7D7;
+  --info-color: #BBBBBB;
+  --highlight-color: #FF57B2;
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+body {
+  background: var(--background-color);
+}
+
+body,
+input,
+button {
+  font: 400 1rem "Inter", sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+
+button {
+  cursor: pointer;
+
+  transition: filter 0.6s;
+}
+
+button:hover {
+  filter: brightness(0.9);
+}
+
